--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-config": "^5.0.1",
+    "@types/react-sticky": "^6.0.3",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
@@ -30,8 +32,10 @@
     "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-sticky": "^6.0.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
