--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: wlixcc/SFTP-Deploy-Action@v1.0
         with:
           username: "root" #ssh user name
-          server: "23.105.194.254 -p 28466"
+          server: "23.105.194.254 -P 28466"
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
           local_path: "./build/*" # 对应我们项目build的文件夹路径
           remote_path: "/usr/share/nginx/html/"
