--- a/package.json
+++ b/package.json
@@ -6,12 +6,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-config": "^5.0.1",
-    "@types/react-sticky": "^6.0.3",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
@@ -36,6 +30,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-sticky": "^6.0.3",
+    "react-transition-group": "^4.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -61,6 +56,13 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.3"
+    "@types/react-router-dom": "^5.1.3",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-config": "^5.0.1",
+    "@types/react-sticky": "^6.0.3",
+    "@types/react-transition-group": "^4.2.4"
   }
 }
