--- a/package.json
+++ b/package.json
@@ -56,13 +56,20 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.3",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-config": "^5.0.1",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-sticky": "^6.0.3",
-    "@types/react-transition-group": "^4.2.4"
+    "@types/react-transition-group": "^4.2.4",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "prettier": "^2.0.4"
   }
 }
